--- a/.classpath
+++ b/.classpath
@@ -15,7 +15,9 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/work/pleiades/2022-12/tomcat/9/lib/servlet-api.jar"/>
+	<!-- Javaのテスト用ライブラリ -->
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mockito-all-1.10.19.jar"/>
+	<!-- googleのjsonライブラリ -->
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/gson-2.10.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="build/classes"/>
